--- a/angular.json
+++ b/angular.json
@@ -106,6 +106,13 @@
               "src/**/*.html"
             ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "https://vladimirm89.github.io/Airways/",
+            "message": "deploy app to Github Pages"
+          }
         }
       }
     }
