--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/template/process-inline-templates",
         "airbnb-base",
-        "airbnb-typescript/base"
+        "airbnb-typescript/base",
+        "plugin:prettier/recommended"
       ],
       "rules": {
         "@angular-eslint/directive-selector": [
@@ -38,7 +39,8 @@
         ],
         "@typescript-eslint/explicit-member-accessibility": ["warn"],
         "@typescript-eslint/explicit-function-return-type": ["warn"],
-        "no-console": "warn"
+        "@angular-eslint/no-output-on-prefix": ["off"],
+        "no-console": ["warn"]
       }
     },
     {
@@ -48,7 +50,9 @@
       "extends": [
         "plugin:@angular-eslint/template/recommended"
       ],
-      "rules": {}
+      "rules": {
+        "@angular-eslint/template/accessibility-alt-text": "error"
+      }
     }
   ]
 }
