--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
         "@typescript-eslint/explicit-member-accessibility": ["warn"],
         "@typescript-eslint/explicit-function-return-type": ["warn"],
         "@angular-eslint/no-output-on-prefix": ["off"],
+        "import/prefer-default-export": ["off"],
         "no-console": ["warn"]
       }
     },
