--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,7 @@
   "singleQuote": true,
   "semi": true,
   "bracketSpacing": true,
-  "arrowParens": "always",
+  "arrowParens": "avoid",
   "trailingComma": "es5",
   "bracketSameLine": false,
   "printWidth": 80
