--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,8 +41,7 @@
         "@typescript-eslint/explicit-function-return-type": ["warn"],
         "@angular-eslint/no-output-on-prefix": ["off"],
         "import/prefer-default-export": ["off"],
-        "no-console": ["warn"],
-        "@typescript-eslint/no-unused-expressions": ["off"]
+        "no-console": ["warn"]
       }
     },
     {
