--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@ngrx/effects": "^15.4.0",
     "@ngrx/store": "^15.4.0",
     "@ngrx/store-devtools": "^15.4.0",
+    "@types/gapi": "^0.0.44",
+    "@types/google-one-tap": "^1.2.2",
+    "google-one-tap": "^1.0.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
