--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/ngx-toastr/toastr.css",
               "src/styles.scss",
               "src/variables.scss",
               "src/classes.scss"
